<resources>
    <string name="app_name">CVHomework</string>
    <string name="vasya_pupkin">Vasya Pupkin</string>
    <string name="vasya_pupkin_gmail_com">vasya.pupkin@gmail.com</string>
    <string name="_38_044_123_45_67">+38(044)123–45–67</string>
    <string name="education">Education</string>
    <string name="work">Work</string>
    <string name="hobby">Hobby</string>
    <string name="education_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Est ullamcorper eget nulla facilisi etiam dignissim. Lorem mollis aliquam ut porttitor leo. Duis ut diam quam nulla porttitor massa id neque aliquam. Facilisi morbi tempus iaculis urna id volutpat lacus laoreet. Vestibulum lectus mauris ultrices eros in cursus turpis. Mi bibendum neque egestas congue quisque egestas diam in. Dui id ornare arcu odio ut sem. Bibendum enim facilisis gravida neque convallis a. Pellentesque eu tincidunt tortor aliquam nulla. Dolor sed viverra ipsum nunc aliquet bibendum enim facilisis. Non enim praesent elementum facilisis leo vel fringilla. Cras tincidunt lobortis feugiat vivamus.

Lorem donec massa sapien faucibus et molestie ac feugiat. Mollis nunc sed id semper risus in hendrerit gravida rutrum. Dui id ornare arcu odio ut sem nulla pharetra diam. Viverra nam libero justo laoreet. Ut ornare lectus sit amet est placerat. Commodo odio aenean sed adipiscing diam donec adipiscing. Sit amet nulla facilisi morbi tempus iaculis urna id volutpat. Aliquet eget sit amet tellus cras. Ultrices eros in cursus turpis massa tincidunt dui. Volutpat odio facilisis mauris sit amet massa. Gravida dictum fusce ut placerat. Eu non diam phasellus vestibulum. Integer malesuada nunc vel risus commodo viverra maecenas. Suscipit adipiscing bibendum est ultricies integer quis auctor elit sed. Lobortis scelerisque fermentum dui faucibus. Amet cursus sit amet dictum sit amet justo donec. Eu volutpat odio facilisis mauris sit amet massa vitae. Maecenas sed enim ut sem viverra aliquet eget sit amet.

Lectus magna fringilla urna porttitor rhoncus dolor purus non enim. Neque convallis a cras semper auctor. Pellentesque diam volutpat commodo sed egestas egestas fringilla. Quisque id diam vel quam elementum. Cursus mattis molestie a iaculis at erat pellentesque adipiscing commodo. Blandit aliquam etiam erat velit scelerisque in. Aliquet enim tortor at auctor urna nunc id. Sit amet mattis vulputate enim nulla aliquet porttitor. Mauris a diam maecenas sed enim ut sem. Risus ultricies tristique nulla aliquet enim. Cursus eget nunc scelerisque viverra. Tristique senectus et netus et malesuada. Tristique senectus et netus et malesuada fames ac. Adipiscing bibendum est ultricies integer. Amet risus nullam eget felis eget nunc lobortis mattis aliquam. Vulputate enim nulla aliquet porttitor lacus luctus accumsan tortor posuere. Et odio pellentesque diam volutpat commodo sed egestas egestas fringilla.

Dignissim sodales ut eu sem integer. Facilisi morbi tempus iaculis urna id volutpat lacus laoreet non. Convallis a cras semper auctor neque. Sed blandit libero volutpat sed cras ornare arcu dui. Vel facilisis volutpat est velit egestas dui id ornare. Eget aliquet nibh praesent tristique magna. Turpis egestas maecenas pharetra convallis posuere morbi. In hac habitasse platea dictumst vestibulum. Est sit amet facilisis magna etiam tempor orci eu. Sit amet volutpat consequat mauris nunc congue nisi vitae suscipit.

Ipsum dolor sit amet consectetur adipiscing. Enim sed faucibus turpis in eu mi bibendum neque egestas. A diam sollicitudin tempor id eu nisl nunc mi. Non odio euismod lacinia at quis risus sed vulputate. Non sodales neque sodales ut etiam. Consectetur libero id faucibus nisl. Pharetra massa massa ultricies mi quis hendrerit. At tellus at urna condimentum mattis. Nullam ac tortor vitae purus faucibus ornare. Parturient montes nascetur ridiculus mus mauris. Nunc sed id semper risus. Suspendisse interdum consectetur libero id faucibus nisl. Faucibus turpis in eu mi bibendum neque egestas. Quis vel eros donec ac. Amet venenatis urna cursus eget nunc scelerisque viverra mauris. Tristique et egestas quis ipsum suspendisse ultrices.</string>
</resources>
